# TermCap

./: .gitignore  404.html  CNAME  MANIFEST.in  README.en.md  README.md  README_termcap.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  docs.yml  preview.yml  publish.yml  release.yml
docs/: Installation.md  QuickStart.md  README.md  index.en.md  index.md  templates.en.md  templates.md
docs/API/: Animation.md  Asciicast.md  Config.md  Terminal.md
docs/CLI/: Commands.md  Configuration.md  Templates.md
docs/examples/: index.en.md  index.md
docs/manual/: termcap-templates.en.md  termcap-templates.md  termcap.en.md  termcap.md
en/: index.html
en/examples/: index.html
en/manual/termcap/: index.html
en/manual/termcap-templates/: index.html
en/templates/: index.html
examples/: index.html
man/: termcap-templates.md  termcap.md
manual/termcap/: index.html
manual/termcap-templates/: index.html
scripts/: termcap
search/: search_index.json
src/termcap/: cli.py  cli_config.py  const.py  player.py
src/termcap/commands/: __init__.py  common.py  config.py  record.py  render.py  replay.py  template.py
src/termcap/config/: __init__.py  defaults.py  manager.py  paths.py
src/termcap/parser/: __init__.py  asciicast.py
src/termcap/recorder/: __init__.py  core.py  terminal.py
src/termcap/renderer/: __init__.py  core.py  svg.py  theme.py
templates/: index.html
termcap/: __main__.py  cli.py  main.py
termcap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
termcap/tests/: suite.py
termtosvg.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_basic.py  test_cli.py  test_config.py  test_main.py  test_parser.py  test_recorder.py  test_renderer.py
