[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termcap"
version = "0.1.1"
description = "Terminal capture tool - Record terminal sessions as SVG animations"
readme = "README.md"
requires-python = ">=3.5"
license = { text = "MIT License" }
authors = [
    { name = "rexwzh", email = "1073853456@qq.com" }
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
dependencies = [
    "lxml",
    "pyte",
    "wcwidth",
    "click",
    "platformdirs",
    "toml",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pylint",
    "twine",
    "wheel",
    "pytest",
    "pytest-cov",
    "build",
]

[project.urls]
Homepage = "https://github.com/rexwzh/termcap"

[project.scripts]
termcap = "termcap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["termcap"]
include-package-data = true

[tool.setuptools.package-data]
termcap = ["data/*.dtd"]
